Simulator service implementations, api.yaml updated, DataHelper changed to repository and for internal access, reponse and requests updated
